<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="center.innovus.nutriassist.Activities.AsignarActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="25"
        android:layout_gravity="center_horizontal"
        android:textSize="35sp"
        android:paddingTop="25dp"
        android:id="@+id/result_VCT" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/total_caloric_value" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="10"
        android:layout_gravity="center_horizontal"
        android:textSize="35sp"
        android:paddingTop="25dp"
        android:id="@+id/tvNotAssignedPercentage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"

        android:text="@string/tvNotAssignedPercentage" />


    <android.support.design.widget.TextInputLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:paddingBottom="8dp"
        android:paddingTop="25dp"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/protein_percentage"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tv_protein_percentage"
        android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:paddingBottom="8dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/fat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:hint="@string/fat"
        android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:paddingBottom="8dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/carbohydrates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/carbohydrates"
        android:inputType="number" />
    </android.support.design.widget.TextInputLayout>



    <Button
        android:id="@+id/assignPercentage"
        android:layout_width="150dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="btnAssignar"
        android:background="@color/colorAccent"
        android:text="@string/assignPercentage" />



</LinearLayout>
