<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="center.innovus.nutriassist.Activities.ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >




        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:paddingBottom="8dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/activity_factor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/activity_factor"
                android:inputType="numberDecimal" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:paddingBottom="8dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/height"
                android:paddingBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height"
                android:inputType="number" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:paddingBottom="8dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="number" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:paddingBottom="8dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/expected_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/expected_weight"
                android:inputType="number" />


        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/tvSex"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/sex"
                android:paddingRight="20dp"

                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/radioGroupSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/masculine" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/femenine" />
            </RadioGroup>
        </LinearLayout>







        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Calcular VCT"
            android:background="@color/colorAccent"
            android:layout_marginBottom="40dp"
            android:id="@+id/button" />


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
